fixed copy from last saved and added highlight locality
In BridgeDialog fixed the copy from last saved bridge and other odd stuff.
added so the locality closest to the marker gets highlighted.